@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20110819)"
+#define VERSION	"Fourth Edition (20110820)"
